--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,11 +27,11 @@ jobs:
       run: cd $GITHUB_WORKSPACE
 
     - name: Restore Packages
-      run: nuget restore Sandbox.sln
+      run: nuget restore SimpleNetFrame.sln
 
     - name: Build Solution
       run: |
-        msbuild.exe Sandbox.sln /p:platform="Any CPU" /p:configuration="Release"
+        msbuild.exe SimpleNetFrame.sln /p:platform="Any CPU" /p:configuration="Release"
         
     - name: Run Tests
-      run: vstest.console.exe .\tests\Sandbox.Tests\bin\Release\Sandbox.Tests.dll
+      run: vstest.console.exe .\UnitTestProject1\bin\Release\UnitTestProject1.dll
