specify output directory

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,8 @@ jobs:
 
     - name: Build Solution
       run: |
-        msbuild.exe SimpleNetFrame.sln /p:platform="Any CPU" /p:configuration="Release" /o:build-output
+        pwd
+        msbuild.exe SimpleNetFrame.sln /p:platform="Any CPU" /p:configuration="Release" /p:OutputPath=.\build-output
         
     - name: Run Tests
       run: vstest.console.exe .\UnitTestProject1\bin\Release\UnitTestProject1.dll
@@ -43,4 +44,4 @@ jobs:
         app-name: 'app-appspoke-az-ince-dev-001'
         slot-name: 'Production'
         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_PRODUCTION }}
-        package: ./build-output
+        package: .\build-output
