--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,22 +32,22 @@ jobs:
     - name: Build Solution
       run: |
         pwd
-        msbuild.exe SimpleNetFrame.sln /p:platform="Any CPU" /p:configuration="Release" /p:OutputPath=.\build-output
+        msbuild.exe SimpleNetFrame.sln /p:platform="x64" /p:configuration="Release" /p:OutputPath=.\build-output
 
-    - run: |
-        dir D:\a\dotnet-framework-48\dotnet-framework-48\SimpleNetFrame\build-output\
+    # - run: |
+    #     dir D:\a\dotnet-framework-48\dotnet-framework-48\SimpleNetFrame\build-output\
 
-    - run: |
-        dir D:\a\dotnet-framework-48\dotnet-framework-48\SimpleNetFrame\
+    # - run: |
+    #     dir D:\a\dotnet-framework-48\dotnet-framework-48\SimpleNetFrame\
         
     # - name: Run Tests
     #   run: vstest.console.exe .\UnitTestProject1\bin\Release\UnitTestProject1.dll
 
-    # - name: Deploy to Azure Web App
-    #   id: deploy-to-webapp
-    #   uses: azure/webapps-deploy@v2
-    #   with:
-    #     app-name: 'app-appspoke-az-ince-dev-001'
-    #     slot-name: 'Production'
-    #     publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_PRODUCTION }}
-    #     package: D:\a\dotnet-framework-48\dotnet-framework-48\SimpleNetFrame\build-output\
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'app-appspoke-az-ince-dev-001'
+        slot-name: 'Production'
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_PRODUCTION }}
+        package: D:\a\dotnet-framework-48\dotnet-framework-48\SimpleNetFrame\build-output\
