--- a/.github/workflows/main_man-old-app.yml
+++ b/.github/workflows/main_man-old-app.yml
@@ -51,7 +51,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: "man-old-app"
+          app-name: "app-appspoke-az-ince-dev-001"
           slot-name: "Production"
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5F570A7270EB4D5FB1874B54777A2F07 }}
+          publish-profile: ${{ secrets.APP_APPSPOKE_PUBLISHFILE }}
           package: .
