--- a/SimpleNetFrame/packages.config
+++ b/SimpleNetFrame/packages.config
@@ -7,10 +7,12 @@
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.20.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.20.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.20.0" targetFramework="net48" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.20.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.20.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.8" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
