--- a/SimpleNetFrame/Web.config
+++ b/SimpleNetFrame/Web.config
@@ -9,7 +9,7 @@
   </configSections>
   <configBuilders>
     <builders>
-      <add name="AzureKeyVault" vaultName="[VaultName]" type="Microsoft.Configuration.ConfigurationBuilders.AzureKeyVaultConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Azure, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <add name="AzureKeyVault" vaultName="kv-app2-az-ince-dev-01" type="Microsoft.Configuration.ConfigurationBuilders.AzureKeyVaultConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Azure, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </builders>
   </configBuilders>
   <appSettings configBuilders="AzureKeyVault">
@@ -17,7 +17,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="kubeexuser" value="from key vault" />
+	  <add key="kubeexuser" value="kubeexuser" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
