--- a/SimpleNetFrame/packages.config
+++ b/SimpleNetFrame/packages.config
@@ -5,6 +5,10 @@
   <package id="Azure.Identity" version="1.5.0" targetFramework="net48" />
   <package id="Azure.Security.KeyVault.Keys" version="4.2.0" targetFramework="net48" />
   <package id="Azure.Security.KeyVault.Secrets" version="4.2.0" targetFramework="net48" />
+  <package id="Azure.Storage.Blobs" version="12.11.0" targetFramework="net48" />
+  <package id="Azure.Storage.Common" version="12.10.0" targetFramework="net48" />
+  <package id="Azure.Storage.Files.Shares" version="12.9.0" targetFramework="net48" />
+  <package id="Azure.Storage.Queues" version="12.9.0" targetFramework="net48" />
   <package id="bootstrap" version="5.1.3" targetFramework="net48" />
   <package id="jQuery" version="3.6.0" targetFramework="net48" />
   <package id="Microsoft.ApplicationInsights" version="2.20.0" targetFramework="net472" />
@@ -28,8 +32,13 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Azure" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="2.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Azure" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="6.0.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Identity.Client" version="4.42.0" targetFramework="net48" />
   <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.19.6" targetFramework="net48" />
@@ -39,6 +48,7 @@
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Hashing" version="6.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Memory.Data" version="6.0.0" targetFramework="net48" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
