--- a/SimpleNetFrame/SimpleNetFrame.csproj
+++ b/SimpleNetFrame/SimpleNetFrame.csproj
@@ -328,6 +328,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\FileTestingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestErrorController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
