Fix: blob, fileshare

--- a/SimpleNetFrame/Web.config
+++ b/SimpleNetFrame/Web.config
@@ -9,15 +9,18 @@
   </configSections>
   <configBuilders>
     <builders>
-      <add name="AzureKeyVault" vaultName="kv-app2-az-ince-dev-01" type="Microsoft.Configuration.ConfigurationBuilders.AzureKeyVaultConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Azure, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <add name="Env" type="Microsoft.Configuration.ConfigurationBuilders.EnvironmentConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Environment" />
+      <add name="AzureKeyVault" vaultName="${AZURE_KEYVAULT_NAME}" mode="Greedy" type="Microsoft.Configuration.ConfigurationBuilders.AzureKeyVaultConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Azure, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </builders>
   </configBuilders>
-  <appSettings configBuilders="AzureKeyVault">
+  <appSettings configBuilders="Env,AzureKeyVault">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	  <add key="kubeexuser" value="kubeexuser" />
+    <add key="AZURE_KEYVAULT_NAME" value="from env" />
+    <add key="kubeexuser" value="" />
+	  <add key="blobcred" value="" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
