--- a/SimpleNetFrame/packages.config
+++ b/SimpleNetFrame/packages.config
@@ -32,6 +32,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Azure" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="2.0.0" targetFramework="net48" />
+  <package id="Microsoft.Configuration.ConfigurationBuilders.Environment" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Azure" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="6.0.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net48" />
