--- a/SimpleNetFrame/packages.config
+++ b/SimpleNetFrame/packages.config
@@ -10,6 +10,8 @@
   <package id="Azure.Storage.Files.Shares" version="12.9.0" targetFramework="net48" />
   <package id="Azure.Storage.Queues" version="12.9.0" targetFramework="net48" />
   <package id="bootstrap" version="5.1.3" targetFramework="net48" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="EntityFramework6.Npgsql" version="6.4.3" targetFramework="net48" />
   <package id="jQuery" version="3.6.0" targetFramework="net48" />
   <package id="Microsoft.ApplicationInsights" version="2.20.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net472" />
@@ -46,6 +48,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="Npgsql" version="4.1.3" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
