--- a/SimpleNetFrame/Web.config
+++ b/SimpleNetFrame/Web.config
@@ -13,7 +13,7 @@
   <configBuilders>
     <builders>
       <add name="Env" type="Microsoft.Configuration.ConfigurationBuilders.EnvironmentConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Environment" />
-      <add name="AzureKeyVault" vaultName="${AZURE_KEYVAULT_NAME}" mode="Greedy" type="Microsoft.Configuration.ConfigurationBuilders.AzureKeyVaultConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Azure, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <add name="AzureKeyVault" vaultName="${AZURE_KEYVAULT_NAME}" type="Microsoft.Configuration.ConfigurationBuilders.AzureKeyVaultConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Azure, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </builders>
   </configBuilders>
   <appSettings configBuilders="Env,AzureKeyVault">
@@ -26,7 +26,7 @@
     <add key="blobcred" value="" />
   </appSettings>
 	<connectionStrings configBuilders="Env,AzureKeyVault">
-		<add name="kubeexuser" connectionString="" />
+		<add name="kubeexuser" connectionString="" providerName="Npgsql" />
 	</connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
